# pyutils26

./: .gitignore  README.md  example.ipynb  example_verification.ipynb  foobar.ipynb  foobar.py  pyproject.toml  setup.py
.github/workflows/: pytest_linux.yml  pytest_windows.yml
src/cgshop2026_pyutils/: verify.py  visualize.py
src/cgshop2026_pyutils/geometry/: CMakeLists.txt  __init__.py  _bindings.cpp  _bindings.pyi  constrained_triangulation.cpp  constrained_triangulation.h  draw.py  flip_partner_map.py  flippable_triangulation.py  geometry_operations.cpp  geometry_operations.h  number_parsing.cpp  number_parsing.h  triangulation_validation.cpp
src/cgshop2026_pyutils/instance_database/: instance_base_database.py  instance_database.py  instance_file_database.py  instance_zip_database.py
src/cgshop2026_pyutils/io/: __init__.py
src/cgshop2026_pyutils/schemas/: __init__.py  instance.py  solution.py
src/cgshop2026_pyutils/zip/: zip_processor.py  zip_reader_errors.py  zip_writer.py
tests/: test_verify.py
tests/geometry/: test_compute_triangles.py  test_do_cross.py  test_flip_partner_map.py  test_flippable_triangulation.py  test_is_triangulation.py
